classDiagram
direction LR
class BoardCoordinates {
    +CellToLocal(BoardData board, Vector2Int cell) Vector3$
}
class BoardManager {
    -Transform boardRoot
    -ConveyorController conveyorController
    -BuoyVisual buoyPrefab
    -BuoyStackVisual buoyStackPrefab
    -BuoyStackHolderVisual buoyStackHolderPrefab
    -InputSystem inputSystem
    -MaxBuoyCounterTxt counterPrefab
    -MaxBuoyCounterTxt counter
    +ConfigureCounter(MaxBuoyCounterTxt prefab) void
    -InitializeCounter(BoardData board, MaxBuoyCounterTxtData data) void
    -StackQueueVisual stackQueueVisual
    -StackQueueExit stackQueueExit
    -StackQueueController stackQueue
    +StackQueueController StackQueue
    +Action StackQueueFull
    +ConfigureStackQueue(StackQueueVisual visual, StackQueueExit exit) void
    +SetPaused(bool paused) void
    -OnQueueFull() void
    -OnConveyorEnd(ConveyorBuoyGroup group) void
    -float transferSpeed
    -float launchInterval
    -float receiveFlightDuration
    -float receiveLaunchDelay
    +SetReceiveSettings(float duration, float delay) void
    +Configure(Transform root, ConveyorController conveyor, InputSystem input, BuoyVisual buoy, BuoyStackVisual stack, BuoyStackHolderVisual holder) void
    +SetMotionSettings(float speed, float interval) void
    -BuoyTransferController transfers
    -LateUpdate() void
    -BuoyStackHolderController buoyStackHolderController
    +InitBoard(BoardData boardData, PathData pathData, IReadOnlyList~BuoyNodeData~ nodes, ColorDataSO colors, int maxStackInStackQueue = 3, int maxBuoyInConveyor = 5, MaxBuoyCounterTxtData counterData = null) void
    -OnDestroy() void
}
MonoBehaviour <|-- BoardManager
class IInputReceiver {
    <<interface>>
    +bool CanReceiveInput
    +OnClick() void
}
class InputSystem {
    -Camera inputCamera
    -LayerMask raycastMask
    -float maxDistance
    -Dictionary~Collider_IInputReceiver~ receivers
    -List~RaycastResult~ uiHits
    +Register(Collider inputCollider, IInputReceiver receiver) void
    +Unregister(Collider inputCollider, IInputReceiver receiver) void
    -Update() void
    -ProcessPress(Vector2 screenPosition, int pointerId) void
    -IsOverUI(Vector2 screenPosition, int pointerId) bool
    -OnDestroy() void
}
MonoBehaviour <|-- InputSystem
class LevelManager {
    -LevelDataSO levelData
    -BoardManager boardManager
    -Transform boardRoot
    -ConveyorController conveyorController
    -InputSystem inputSystem
    -BuoyVisual buoyPrefab
    -BuoyStackVisual buoyStackPrefab
    -BuoyStackHolderVisual buoyStackHolderPrefab
    -SplineComputer splineComputer
    -SplineMesh splineMesh
    -float moveSpeed
    -float waterSpeed
    -float rootYOffset
    -float pathMoveSlotSpacing
    -float conveyorGroupGap
    -float cornerRadius
    -float transferSpeed
    -float launchInterval
    -float receiveFlightDuration
    -float receiveLaunchDelay
    -StackQueueVisual stackQueueVisual
    -StackQueueExit stackQueueExit
    -MaxBuoyCounterTxt maxBuoyCounterPrefab
    +bool HasLost
    +Action Lost
    -OnStackQueueFull() void
    -OnDestroy() void
    -OnValidate() void
    -ApplyMotionSettings() void
    -Start() void
    +InitLevel() void
}
MonoBehaviour <|-- LevelManager
LevelManager --> BoardManager : initializes
LevelManager --> BoardManager : queue failure to Lost
InputSystem --> IInputReceiver : dispatches clicks
